# nfs-ganesha-grpc

./: .gitignore
src/: .clang-format  CMakeLists.txt  nfs-ganesha.spec-in.cmake
src/FSAL/: common_pnfs.c  commonlib.c  default_methods.c  fsal_config.c  fsal_helper.c  fsal_manager.c  localfs.c
src/FSAL/FSAL_CEPH/: export.c  handle.c  main.c
src/FSAL/FSAL_GLUSTER/: handle.c
src/FSAL/FSAL_GPFS/: file.c  fsal_ds.c  fsal_mds.c  handle.c
src/FSAL/FSAL_GPFS/include/: gpfs_nfs.h
src/FSAL/FSAL_KVSFS/: kvsfs_handle.c  kvsfs_methods.h
src/FSAL/FSAL_PROXY_V3/: rpc.c
src/FSAL/FSAL_PROXY_V4/: fsal_nfsv4_macros.h  handle.c
src/FSAL/FSAL_PROXY_V4/handle_mapping/: handle_mapping_db.c
src/FSAL/FSAL_SAUNAFS/: handle.c
src/FSAL/FSAL_VFS/: handle.c
src/FSAL/FSAL_VFS/vfs/: main-c.in.cmake
src/FSAL/Stackable_FSALs/FSAL_MDCACHE/: mdcache_export.c  mdcache_handle.c  mdcache_hash.h  mdcache_helpers.c  mdcache_main.c
src/FSAL/Stackable_FSALs/FSAL_NULL/: export.c
src/FSAL_UP/: fsal_up_async.c  fsal_up_top.c
src/MainNFSD/: 9p_rdma_callbacks.c  CMakeLists.txt  libganesha_nfsd.ver  nfs_admin_thread.c  nfs_init.c  nfs_main.c  nfs_metrics.c  nfs_rpc_callback.c  nfs_rpc_dispatcher_thread.c  nfs_worker_thread.c
src/Protocols/NFS/: mnt_Export.c  nfs3_commit.c  nfs3_getattr.c  nfs3_read.c  nfs3_readdir.c  nfs3_readdirplus.c  nfs3_setattr.c  nfs3_write.c  nfs4_Compound.c  nfs4_op_allocate.c  nfs4_op_bind_conn.c  nfs4_op_delegreturn.c  nfs4_op_free_stateid.c  nfs4_op_getattr.c  nfs4_op_lock.c  nfs4_op_open.c  nfs4_op_read.c  nfs4_op_readdir.c  nfs4_op_setclientid.c  nfs4_op_setclientid_confirm.c  nfs4_op_write.c  nfs4_op_xattr.c  nfs4_pseudo.c  nfs_proto_tools.c
src/Protocols/NFSACL/: nfsacl_getacl.c
src/Protocols/NLM/: nlm_async.c
src/RPCAL/: connection_manager.c  nfs_dupreq.c  rpc_tools.c
src/SAL/: nfs41_session_id.c  nfs4_clientid.c  nfs4_recovery.c  nfs4_state.c  nlm_owner.c  state_deleg.c  state_lock.c  state_misc.c
src/SAL/recovery/: recovery_fs.c  recovery_fs_ng.c  recovery_rados.h  recovery_rados_cluster.c  recovery_rados_kv.c  recovery_rados_ng.c
src/cidr/: cidr_to_str.c
src/config_parsing/: analyse.c  analyse.h  conf_lex.l  config_parsing.c
src/config_samples/: config.txt  export.txt
src/dbus/: dbus_server.c
src/doc/man/: ganesha-core-config.rst  ganesha-export-config.rst
src/grpc_server/: CMakeLists.txt  GrpcServer.cc  nfsService.h  nfsServiceClient.cpp  nfsServiceServer.cpp
src/hashtable/: hashtable.c
src/idmapper/: idmapper.c  idmapper_cache.c  idmapper_monitoring.c  idmapper_negative_cache.c
src/include/: 9p_req_queue.h  avltree.h  client_mgr.h  common_utils.h  config-h.in.cmake  config_parsing.h  connection_manager.h  export_mgr.h  fsal.h  fsal_api.h  fsal_types.h  fsal_up.h  gsh_config.h  gsh_list.h  gsh_rpc.h  log.h  nfs_core.h  nfs_dupreq.h  nfs_exports.h  nfs_metrics.h  nfsv41.h  sal_functions.h
src/include/FSAL/: fsal_commonlib.h
src/include/gRPC/: GrpcServer.h
src/include/gsh_lttng/: gsh_lttng.h
src/log/: log_functions.c
src/monitoring/: CMakeLists.txt  dynamic_metrics.cc  prometheus_exposer.cc
src/monitoring/include/: dynamic_metrics.h  prometheus_exposer.h
src/proto/: CMakeLists.txt  nfsService.proto
src/scripts/: checkpatch.conf  runcp.sh
src/scripts/ganeshactl/Ganesha/: ganesha_mgr_utils.py
src/support/: client_mgr.c  delayed_exec.c  export_mgr.c  exports.c  fridgethr.c  nfs_convert.c  nfs_creds.c  nfs_read_conf.c  server_stats.c  uid2grp_cache.c  xprt_handler.c
src/tools/: ganesha-rados-grace.c
